# sandwich-exchange

./: .flake8  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  main.py
app/blueprints/: __init__.py  api_interface.py
app/blueprints/about/: about.py
app/blueprints/add_sandwich/: create.py
app/blueprints/error_blueprint/: error_handler.py
app/blueprints/index/: index.py
app/dash_apps/: app1.py  app_candlechart.py  app_piechart.py  app_top5.py
app/templates/: index.html
database/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--402109316360741368.wt  collection-0-6788145066258349729.wt  collection-2--402109316360741368.wt  index-1--402109316360741368.wt  index-1-6788145066258349729.wt  index-2-6788145066258349729.wt  index-3--402109316360741368.wt  sizeStorer.wt
database/diagnostic.data/: metrics.2024-02-26T02-01-03Z-00000  metrics.2024-02-26T02-29-30Z-00000  metrics.2024-02-26T02-30-34Z-00000  metrics.2024-02-26T02-34-50Z-00000  metrics.2024-02-26T02-37-07Z-00000  metrics.2024-02-26T02-37-50Z-00000  metrics.2024-02-26T02-38-33Z-00000  metrics.2024-02-26T02-40-38Z-00000  metrics.2024-02-26T02-48-42Z-00000  metrics.2024-02-26T02-50-11Z-00000
server/: .dockerignore  Dockerfile  database.py  main.py
server/models/: __init__.py  api_token.py  price_history.py  sandwich.py
server/routes/: __init__.py  api_sandwiches.py  index.py
server/utils/: __init__.py  utils.py
simulator/: __init__.py  main.py
tests/: test_price_history.py  test_pymongo.py  test_sandwich.py  test_server_calls.py
(+15 files in other folders)
