[tool.poetry]
name = "sandwich-exchange"
version = "0.1.0"
description = "A stock exchange for sandwiches."
authors = ["reezuleanu"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pydantic = "^2.6.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
flake8 = "^7.0.0"
requests = "^2.31.0"
pytest = "^8.0.1"
pandas = "^2.2.0"
dash = "^2.15.0"
pymongo = "^4.6.1"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.36"
flask = "^3.0.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
